--- a/index1.html
+++ b/index1.html
@@ -46,7 +46,7 @@
       <!--suratuz ru tj-->   
         <div class="contaner">
               <div class="image">
-           <img src="./1imagess/Frame 7 (1).png" alt="">
+           <img src="./img/Frame 7 (1).png" alt="">
         </div>
         </div>
 
