--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
           <div class="contaner">
             <section>
     <div class="saw">
-<a href="https://wa.me/qr/GMPPFI6N5VQRA1 "class="ass">
+<a href="https://wa.me/79961956666"class="ass">
     
          <i class="fa-brands fa-whatsapp fa-xl" style="margin-top: 12px;"></i>
  <span class="wae">WhatsApp</span>
