--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Browse Plans
 <i class="ri-add-line ri-lg text-gray-500"></i>
 </div>
 </div>
-<p class="text-xs text-center truncate">Add Story</p>
+<p class="text-xs text-center truncate">Adddd Story</p>
 </div>
 </div>
 </section>
