--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ padding-bottom: 64px;
 }
 
 .ru{
+    position: relative;
  
-    margin-right: 10px;
+    margin-right: 80px;
     
     width: 30px;
     border-radius: 4px;
@@ -65,11 +66,13 @@ padding-bottom: 64px;
 
  
  .uz{
-    margin-right: 14px;
+    position: absolute;
+    margin-right: 18px;
     background-color: blue;
     color: aliceblue;
     border-radius: 4px;
     width: 28px;
+    margin-left: -66px;
  }
  .uz:hover{
     background-color: #00178a;
@@ -77,10 +80,12 @@ padding-bottom: 64px;
 
 
  .tj{
+    position: absolute;
    background-color: rgb(83, 184, 25);
    color: aliceblue;
-   width: 30px;
+   width: 30PX;
    border-radius: 4px;
+   margin-left: -20px;
 
  }
  .tj:hover{
@@ -90,7 +95,6 @@ padding-bottom: 64px;
  .button:hover .ru:checked ~ .custom-Ru{
     background-color: #433b1c;
  }
-
 
 </style>
 </head>
