--- a/index1.html
+++ b/index1.html
@@ -37,7 +37,7 @@
 
 <section>
     <div class="sas">
-<a href="https://wa.me/qr/GMPPFI6N5VQRA1"class="ass">
+<a href="https://t.me/+fvWPhzlUuIcyODUy"class="ass">
     
           <i class="fa-brands fa-telegram fa-xl" style="margin-top: 12px;"></i>
  <span class="wae">   Telegram</span>
