--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title data-ru="Магазин SIM-карт" data-uz="SIM-karta Do'koni" data-tj="Мағозаи SIM-картаҳо">SIM Card Shop</title>
 <script src="https://cdn.tailwindcss.com/3.4.16"></script>
 <script>tailwind.config={theme:{extend:{colors:{primary:'#6200EA',secondary:'#FF9800'},borderRadius:{'none':'0px','sm':'4px',DEFAULT:'8px','md':'12px','lg':'16px','xl':'20px','2xl':'24px','3xl':'32px','full':'9999px','button':'8px'}}}}</script>
+
+    
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -102,6 +104,7 @@ padding-bottom: 64px;
 <!-- Header/Nav Bar -->
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
 <div class="flex items-center justify-between px-4 py-3">
+    <img src="./img/475752c9682f67b80bbc30baa649bfea (1).jpg" alt="SIM Card Offers" class="w-full h-full object-cover object-top">
 <div class="flex items-center">
 <div class="w-10 h-10 flex items-center justify-center mr-2 logo-animation">
 <span class="font-['Pacifico'] text-primary text-2xl">sim-card</span>
