--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ padding-bottom: 64px;
 <!---Hero section-->
 <section class="mt-4 px-4">
 <div class="relative w-full h-48 bg-gradient-to-r from-primary/10 to-secondary/10 rounded-lg overflow-hidden">
-
+<img src="./img/475752c9682f67b80bbc30baa649bfea (1).jpg" alt="SIM Card Offers" class="w-full h-full object-cover object-top">
 <div class="absolute inset-0 bg-black/20 flex items-center justify-center">
 <div class="text-center text-white">
 <h2 class="text-2xl font-bold mb-2" data-ru="Премиум SIM-карты" data-uz="Premium SIM-kartalar" data-tj="SIM-картаҳои премиум">Premium SIM Cards</h2>
