--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#00B956]">₽25.99</span>
+<span class="text-sm font-bold text-[#00B956]"> ₽25.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (999) 385 76-06</p>
@@ -814,7 +814,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-black"> ₽24.99</span>
+<span class="text-sm font-bold text-black">  ₽24.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 991 700 56-77</p>
@@ -841,7 +841,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#00B956]">₽25.99</span>
+<span class="text-sm font-bold text-[#00B956]"> ₽25.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (999) 384 74-14</p>
@@ -872,7 +872,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#FFCC00]">$19.99</span>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽19.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (888) 999-7777</p>
@@ -900,7 +900,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#0077FF]">$29.99</span>
+<span class="text-sm font-bold text-[#0077FF]"> ₽29.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (777) 888-9999</p>
@@ -928,7 +928,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#E30611]">$27.99</span>
+<span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (777) 777-7777</p>
@@ -957,7 +957,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-[#00B956]">$25.99</span>
+<span class="text-sm font-bold text-[#00B956]"> ₽25.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (800) 888-8888</p>
@@ -985,7 +985,7 @@ padding-bottom: 64px;
 </div>
 <p class="text-xs text-gray-600 mb-2" data-ru="Неограниченное количество данных, гибкие тарифные планы" data-uz="Cheksiz ma'lumotlar, moslashuvchan ma'lumotlar rejalari" data-tj="Маълумоти номаҳдуд, нақшаҳои тағйирпазир">Unlimited data, flexible plans</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold">$12.99/mo</span>
+<span class="text-sm font-bold"> ₽12.99/mo</span>
 <button class="bg-[#0077FF] text-white text-xs px-2 py-1 !rounded-button cursor-pointer"  data-ru="В корзина"  data-uz="savatga " data-tj="Харидан"></a></a>
      
 
@@ -1004,7 +1004,7 @@ padding-bottom: 64px;
 </div>
 <p class="text-xs text-gray-600 mb-2" data-ru="Бюджетный вариант с большим охватом " data-uz="Katta qamrovli byudjetga mos" data-tj="Аз ҷиҳати буҷет бо фарогирии бузург">Budget-friendly with great coverage</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold">$9.99/mo</span>
+<span class="text-sm font-bold"> ₽9.99/mo</span>
 <button class="bg-black text-white text-xs px-2 py-1 !rounded-button cursor-pointer" data-ru="добыть в корзине." data-uz="savatga" data-tj="Харидан" >
 Add to Cart
 </button>
@@ -1021,7 +1021,7 @@ Add to Cart
 </div>
 <p class="text-xs text-gray-600 mb-2" data-ru="Семейные планы с общими данными" data-uz="Umumiy maʼlumotlarga ega oilaviy rejalar" data-tj="Нақшаҳои оилавӣ бо маълумоти муштарак">Family plans with shared data</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold">$14.99/mo</span>
+<span class="text-sm font-bold"> ₽14.99/mo</span>
 <button class="bg-[#FFCC00] text-black text-xs px-2 py-1 !rounded-button cursor-pointer" data-ru="добыть в корзине." data-uz="savatga" data-tj="Харидан">
 Add to Cart
 </button>
@@ -1038,7 +1038,7 @@ Add to Cart
 </div>
 <p class="text-xs text-gray-600 mb-2" data-ru="Премиум-сервис с глобальным роумингом" data-uz="Global rouming bilan premium xizmat" data-tj="Хизматрасонии премиум бо роуминги ҷаҳонӣ">Premium service with global roaming</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold">$16.99/mo</span>
+<span class="text-sm font-bold"> ₽16.99/mo</span>
 <button class="bg-[#E30611] text-white text-xs px-2 py-1 !rounded-button cursor-pointer" data-ru="дабыть в корзине" data-uz="savatga" data-tj="Харидан">
 Add to Cart
 </button>
@@ -1055,7 +1055,7 @@ Add to Cart
 </div>
 <p class="text-xs text-gray-600 mb-2" data-ru="Быстрая сеть 5G с бонусами" data-uz="Bonuslar bilan tezkor 5G tarmog'i" data-tj="Шабакаи 5G зуд бо бонусҳо">Fast 5G network with bonuses</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold">$15.99/mo</span>
+<span class="text-sm font-bold"> ₽15.99/mo</span>
 <button class="bg-[#00B956] text-white text-xs px-2 py-1 !rounded-button cursor-pointer" data-ru=" дабыть в корзине" data-uz="Savatga" data-tj="Харидан">
 Add to Cart
 </button>
@@ -1072,7 +1072,7 @@ Add to Cart
 </div>
 <p class="text-xs text-gray-700 mb-2" data-ru="Ограниченное время: скидка 50% первые 3 месяца" data-uz="Cheklangan vaqt: dastlabki 3 oy uchun 50% chegirma" data-tj="Мӯҳлати маҳдуд: 50% тахфиф барои 3 моҳи аввал">Limited time: 50% off first 3 months</p>
 <div class="flex justify-between items-center">
-<span class="text-sm font-bold" data-ru="От $7.99/мес" data-uz="$7.99/oydan boshlab" data-tj="Аз $7.99/моҳ">From $7.99/mo</span>
+<span class="text-sm font-bold" data-ru="От  ₽7.99/мес" data-uz=" ₽7.99/oydan boshlab" data-tj="Аз  ₽7.99/моҳ">From  ₽7.99/mo</span>
 <button class="bg-primary text-white text-xs px-2 py-1 !rounded-button cursor-pointer" data-ru="Посмотреть" data-uz="Ko'rish" data-tj="Дидан">
 View Deals
 </button>
