--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ padding-bottom: 64px;
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
-<span class="text-sm font-bold text-black">$24.99</span>
+<span class="text-sm font-bold text-black">₽24.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
 <p class="text-xl font-bold text-center">+7 (999) 777-8888 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
