--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 </h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -260,7 +260,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#00B956] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Megafon</h3>
+<h3 class="font-medium">Megafon    50Гб</50></h3>
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
@@ -289,7 +289,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -316,7 +316,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -343,7 +343,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -371,7 +371,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -398,7 +398,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -425,7 +425,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -452,7 +452,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -479,7 +479,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -506,7 +506,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -533,7 +533,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -560,7 +560,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -587,7 +587,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -614,7 +614,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -641,7 +641,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#00B956] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Megafon</h3>
+<h3 class="font-medium">Megafon 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
@@ -670,7 +670,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Beeline</h3>
+<h3 class="font-medium">Beeline 100Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
 </div>
 </div>
@@ -698,7 +698,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#00B956] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Megafon</h3>
+<h3 class="font-medium">Megafon 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
@@ -728,7 +728,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 90Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -755,7 +755,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#00B956] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Megafon</h3>
+<h3 class="font-medium">Megafon 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
@@ -784,7 +784,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-black ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Tele2</h3>
+<h3 class="font-medium">Tele2 90Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Золотой номер" data-uz="Oltin raqam" data-tj="Рақами тилоӣ">Gold Number</p>
 </div>
 </div>
@@ -811,7 +811,7 @@ padding-bottom: 64px;
 <i class="ri-sim-card-line text-[#00B956] ri-lg"></i>
 </div>
 <div>
-<h3 class="font-medium">Megafon</h3>
+<h3 class="font-medium">Megafon 50Гб</h3>
 <p class="text-xs text-gray-500" data-ru="Бизнес номер" data-uz="Biznes raqam" data-tj="Рақами тиҷорат">Business Number</p>
 </div>
 </div>
@@ -823,7 +823,7 @@ padding-bottom: 64px;
 <div class="flex justify-between items-center">
 <div class="flex items-center">
 <i class="ri-star-fill text-yellow-400 mr-1"></i>
-<span class="text-xs text-gray-600" data-ru="Бизнес серия" data-uz="Biznes seriya" data-tj="Силсилаи тиҷорат">Business Series</span>
+<span class="text-xs text-gray-600" data-ru="бизнес сирия"data-uz="Biznes seriya" data-tj="Силсилаи тиҷорат">50 Г Telg VK OK IMo WasT </span>
 </div>
 <button class="bg-[#00B956] text-white px-4 py-2 !rounded-button cursor-pointer">
     <a href="./index1.html" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина"></a>
@@ -849,7 +849,7 @@ padding-bottom: 64px;
 <span class="text-sm font-bold text-[#FFCC00]"> ₽19.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-<p class="text-xl font-bold text-center">+7 (888) 999-7777</p>
+<p class="text-xl font-bold text-center">+7 (888) 999-7777 <br>нет</p>
 </div>
 <div class="flex justify-between items-center">
 <div class="flex items-center">
@@ -877,7 +877,7 @@ padding-bottom: 64px;
 <span class="text-sm font-bold text-[#0077FF]"> ₽29.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-<p class="text-xl font-bold text-center">+7 (777) 888-9999</p>
+<p class="text-xl font-bold text-center">+7 (777) 888-9999 <br>нет</p>
 </div>
 <div class="flex justify-between items-center">
 <div class="flex items-center">
@@ -905,7 +905,7 @@ padding-bottom: 64px;
 <span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-<p class="text-xl font-bold text-center">+7 (777) 777-7777</p>
+<p class="text-xl font-bold text-center">+7 (777) 777-7777 <br>нет</p>
 </div>
 <div class="flex justify-between items-center">
 <div class="flex items-center">
@@ -934,7 +934,7 @@ padding-bottom: 64px;
 <span class="text-sm font-bold text-[#00B956]"> ₽25.99</span>
 </div>
 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-<p class="text-xl font-bold text-center">+7 (800) 888-8888</p>
+<p class="text-xl font-bold text-center">+7 (800) 888-8888  <br>нет </p>
 </div>
 <div class="flex justify-between items-center">
 <div class="flex items-center">
