--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet">
 <link rel="icon" href="">
 <link rel="stylesheet" href="./main.css">
+    <link rel="icon" type="image/x-icon" href="./img/Frame 1 (15).png">
 <style>
 :where([class^="ri-"])::before { content: "\f3c2"; }
 @keyframes glow {
