--- a/index.html
+++ b/index.html
@@ -314,6 +314,35 @@ padding-bottom: 64px;
 </div>
 </div>
 
+<!-- MTS Card -->
+<div class="operator-card mts-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#E30611]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#E30611] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">MTS 200ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (916) 218 60-62 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+    <i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Счастливый номер" data-uz="Baxtli raqam" data-tj="Рақами хушбахт">Lucky Number</span>
+</div>
+<button class="bg-[#E30611] text-white px-4 py-2 !rounded-button cursor-pointer" >
+    <a href="index1.html" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">></a>
+
+</button>
+</div>
+</div>
+
 
 
 
@@ -347,6 +376,34 @@ padding-bottom: 64px;
 </div>
 </div>
 
+<!-- MTS Card -->
+<div class="operator-card mts-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#E30611]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#E30611] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">MTS 200ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (916) 218 71-61 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+    <i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Счастливый номер" data-uz="Baxtli raqam" data-tj="Рақами хушбахт">Lucky Number</span>
+</div>
+<button class="bg-[#E30611] text-white px-4 py-2 !rounded-button cursor-pointer" >
+    <a href="index1.html" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">></a>
+
+</button>
+</div>
+</div>
 
 
 
@@ -381,7 +438,36 @@ padding-bottom: 64px;
 </div>
 </div>
 
- 
+ <!-- MTS Card -->
+<div class="operator-card mts-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#E30611]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#E30611] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">MTS 40ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (916) 508 02-03 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+    <i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Счастливый номер" data-uz="Baxtli raqam" data-tj="Рақами хушбахт">Lucky Number</span>
+</div>
+<button class="bg-[#E30611] text-white px-4 py-2 !rounded-button cursor-pointer" >
+    <a href="index1.html" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">></a>
+
+</button>
+</div>
+</div>
+
+
 
 <!-- Megafon Card -->
 <div class="operator-card megafon-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
@@ -445,6 +531,7 @@ padding-bottom: 64px;
 
 
 
+
 <!-- Megafon Card -->
 <div class="operator-card megafon-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
 <div class="flex items-center justify-between mb-3">
@@ -472,6 +559,34 @@ padding-bottom: 64px;
 
 </button>
 </div>
+</div>
+</div>
+<!-- MTS Card -->
+<div class="operator-card mts-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#E30611]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#E30611] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">MTS 40ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Премиум номер" data-uz="Premium raqam" data-tj="Рақами премиум">Premium Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#E30611]"> ₽27.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (916) 508 19-49 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+    <i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Счастливый номер" data-uz="Baxtli raqam" data-tj="Рақами хушбахт">Lucky Number</span>
+</div>
+<button class="bg-[#E30611] text-white px-4 py-2 !rounded-button cursor-pointer" >
+    <a href="index1.html" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">></a>
+
+</button>
 </div>
 </div>
 <!-- Megafon Card -->
@@ -504,6 +619,33 @@ padding-bottom: 64px;
 </div>
 </div>
 
+<!-- Beeline Card -->
+<div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">Beeline 100ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽37.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (905) 708-7323 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+<i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Серебряная серия" data-uz="Kumush seriya" data-tj="Силсилаи нуқра">Silver Series</span>
+</div>
+<button class="bg-[#FFCC00] text-black px-4 py-2 !rounded-button cursor-pointer">
+<a href="./index1.html" data-ru="В корзина" data-uz="Savatga" data-tj="Ба корзина">КУПИТ</a>
+</button>
+</div>
+</div>
 
 <!-- Megafon Card -->
 <div class="operator-card megafon-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
@@ -534,6 +676,34 @@ padding-bottom: 64px;
 </div>
 </div>
 </div>
+<!-- Beeline Card -->
+<div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">Beeline 100ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽37.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (905) 708-7313 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+<i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Серебряная серия" data-uz="Kumush seriya" data-tj="Силсилаи нуқра">Silver Series</span>
+</div>
+<button class="bg-[#FFCC00] text-black px-4 py-2 !rounded-button cursor-pointer">
+<a href="./index1.html" data-ru="В корзина" data-uz="Savatga" data-tj="Ба корзина">КУПИТ</a>
+</button>
+</div>
+</div>
+
 <!-- Megafon Card -->
 <div class="operator-card megafon-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
 <div class="flex items-center justify-between mb-3">
@@ -626,6 +796,34 @@ padding-bottom: 64px;
 </div>
 </div>
 </div>
+<!-- Beeline Card -->
+<div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">Beeline 300ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽37.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (905) 708-7464</p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+<i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Серебряная серия" data-uz="Kumush seriya" data-tj="Силсилаи нуқра">Silver Series</span>
+</div>
+<button class="bg-[#FFCC00] text-black px-4 py-2 !rounded-button cursor-pointer">
+<a href="./index1.html" data-ru="В корзина" data-uz="Savatga" data-tj="Ба корзина">КУПИТ</a>
+</button>
+</div>
+</div>
+
 <!-- Megafon Card -->
 <div class="operator-card megafon-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
 <div class="flex items-center justify-between mb-3">
@@ -655,7 +853,61 @@ padding-bottom: 64px;
 </div>
 </div>
 </div>
+<!-- Beeline Card -->
+<div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">Beeline 300ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽37.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (905) 708-7477 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+<i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Серебряная серия" data-uz="Kumush seriya" data-tj="Силсилаи нуқра">Silver Series</span>
+</div>
+<button class="bg-[#FFCC00] text-black px-4 py-2 !rounded-button cursor-pointer">
+<a href="./index1.html" data-ru="В корзина" data-uz="Savatga" data-tj="Ба корзина">КУПИТ</a>
+</button>
+</div>
+</div>
 
+<!-- Beeline Card -->
+<div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+<div class="flex items-center justify-between mb-3">
+<div class="flex items-center">
+<div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+<i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
+</div>
+<div>
+<h3 class="font-medium">Beeline 100ГБ</h3>
+<p class="text-xs text-gray-500" data-ru="Серебряный номер" data-uz="Kumush raqam" data-tj="Рақами нуқра">Silver Number</p>
+</div>
+</div>
+<span class="text-sm font-bold text-[#FFCC00]"> ₽37.99</span>
+</div>
+<div class="bg-gray-50 rounded-lg p-3 mb-3">
+<p class="text-xl font-bold text-center">+7 (905) 708-7303 </p>
+</div>
+<div class="flex justify-between items-center">
+<div class="flex items-center">
+<i class="ri-star-fill text-yellow-400 mr-1"></i>
+<span class="text-xs text-gray-600" data-ru="Серебряная серия" data-uz="Kumush seriya" data-tj="Силсилаи нуқра">Silver Series</span>
+</div>
+<button class="bg-[#FFCC00] text-black px-4 py-2 !rounded-button cursor-pointer">
+<a href="./index1.html" data-ru="В корзина" data-uz="Savatga" data-tj="Ба корзина">КУПИТ</a>
+</button>
+</div>
+</div>
 
 
 
