--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,7 @@ Mаршрут в Румянцево.
             <path fill="#696969" d="M832 312H696v-16c0-101.6-82.4-184-184-184s-184 82.4-184 184v16H192c-17.7 0-32 14.3-32 32v536c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V344c0-17.7-14.3-32-32-32m-432-16c0-61.9 50.1-112 112-112s112 50.1 112 112v16H400zm392 544H232V384h96v88c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-88h224v88c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-88h96z"/>
           </svg>
         </div>
-        <span class="text-xs mt-1" data-ru="Истории" data-uz="Hikoyalar" data-tj="Қиссаҳо">Stories</span>
+        <span class="text-xs mt-1" data-ru="Магазин" data-uz="Hikoyalar" data-tj="Қиссаҳо">Stories</span>
       </a>
       <a href="#" class="flex flex-col items-center justify-center text-gray-500 cursor-pointer">
         <div class="w-6 h-6 flex items-center justify-center">
@@ -2125,3 +2125,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
