--- a/sim.html
+++ b/sim.html
@@ -319,7 +319,7 @@ padding-bottom: 64px;
             </video>
 
             <video class="video-frame" controls>
-              <source src="./img/uzbek smilis.mp4" type="video/mp4">
+              <source src="./img/uzbek snilisi.mp4" type="video/mp4">
               Ваш браузер не поддерживает видео.
             </video>
           </div>
@@ -327,7 +327,7 @@ padding-bottom: 64px;
           <!-- Uchinchi video: ularning pastida -->
           <div class="flex justify-center mt-2">
             <video class="video-frame video-small" controls>
-              <source src="./img/TOJIK SNILIS.mp4" type="video/mp4">
+              <source src="img/TOJIK TILI SNILIS.mp4" type="video/mp4">
               Ваш браузер не поддерживает видео.
             </video>
           </div>
