--- a/index.html
+++ b/index.html
@@ -300,9 +300,11 @@
                 <div class="text-center text-white">
                     <h2 class="text-2xl font-bold mb-2" data-ru="Премиум SIM-карты" data-uz="Premium SIM-kartalar" data-tj="SIM-картаҳои премиум">Premium SIM Cards</h2>
                     <p class="text-sm mb-3" data-ru="Найдите идеальный тариф для ваших нужд" data-uz="Ehtiyojingiz uchun mukammal tarifni toping" data-tj="Барои ниёзҳои худ нақшаи комилро пайдо кунед">Find the perfect plan for your needs</p>
-                    <button class="bg-primary text-white px-4 py-2 !rounded-button cursor-pointer">
+                    <a href="./gpt.html">
+                        <button class="bg-primary text-white px-4 py-2 !rounded-button cursor-pointer">
                         <span data-ru="Смотреть тарифы" data-uz="Tariflarni ko'rish" data-tj="Дидани тарифҳо">Browse Plans</span>
                     </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1111,4 +1113,5 @@
     </script>
 </body>
 </html>
+
 
