--- a/gpt.html
+++ b/gpt.html
@@ -1,178 +1,301 @@
 <!doctype html>
 <html lang="uz">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>3D SIM Carousel</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>3D SIM Carousel</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #111;
+      transition: background 0.6s ease;
+      color: #fff; /* Body matn rangi umumiy oq bo'lsin */
+    }
 
-<style>
-  body {
-    font-family: 'Inter', sans-serif;
-    transition: background 0.6s ease;
-  }
-  .carousel-3d {
-    perspective: 1000px;
-    perspective-origin: 50% 40%;
-  }
-  .stage {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    transform-style: preserve-3d;
-    will-change: transform;
-    cursor: grab;
-  }
-  .card-3d {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 180px;
-    height: 130px;
-    transform-style: preserve-3d;
-    transform-origin: center center;
-    transition: transform 0.4s ease;
-  }
-  .card-inner {
-    width: 100%;
-    height: 100%;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(15,23,42,0.15);
-    overflow: hidden;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border-top: 3px solid transparent;
-  }
-  .btn-savat {
-    border-radius: 6px;
-    padding: 4px 8px;
-    font-size: 12px;
-    font-weight: 600;
-  }
-  .dragging { cursor: grabbing !important; }
-</style>
-</head>
-<body class="bg-gray-50 min-h-screen flex items-center justify-center p-4">
+    .carousel-3d {
+      perspective: 1000px;
+      perspective-origin: 50% 50%;
+    }
 
-<section class="w-full max-w-md">
-  <div class="carousel-3d">
-    <div id="stage" class="stage mx-auto"></div>
-  </div>
-</section>
+    .stage {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      height: 350px;
+      margin: auto;
+      transform-style: preserve-3d;
+      cursor: grab;
+    }
 
-<script>
-const cardsData = [
-  { id: 'yota', title: 'Yota Безлимит', price: '₽29.99', phone: '+7 (999) 555-00-11', color: '#0077FF', tag: 'VIP raqam' },
- 
-  { id: 'mts', title: 'MTS 200ГБ', price: '₽27.99', phone: '+7 (916) 218 60-62', color: '#E30611', tag: 'Lucky Number' },
-  { id: 'beeline', title: 'Beeline 50Гб', price: '₽26.99', phone: '+7 (903) 123 45-67', color: '#FFCC00', tag: 'Gold Series' },
+    .card-3d {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 220px;
+      height: 160px;
+      transform-style: preserve-3d;
+      transform-origin: center center;
+      transition: transform 0.4s ease;
+    }
 
-  { id: 'megafon', title: 'Megafon 50Гб', price: '₽25.99', phone: '+7 (999) 384 72-71', color: '#00B956', tag: 'Business Series' },
+    .card-inner {
+      width: 100%;
+      height: 100%;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      border-top: 4px solid transparent;
+      color: #333; /* Karta ichidagi matn rangi */
+    }
 
-];
+    .btn-savat {
+      border-radius: 6px;
+      padding: 5px 10px;
+      font-size: 13px;
+      font-weight: 600;
+      color: #fff; /* Tugma matni rangi */
+    }
 
-let radius = 230;
-const stage = document.getElementById('stage');
-let rotateY = 0, dragging = false, lastX = 0, velocity = 0, lastTime = null;
+    .dragging { cursor: grabbing !important; }
 
-function createCards() {
-  const n = cardsData.length;
-  for (let i = 0; i < n; i++) {
-    const d = cardsData[i];
-    const angle = (360 / n) * i;
-    const wrapper = document.createElement('div');
-    wrapper.className = 'card-3d';
-    wrapper.dataset.color = d.color;
-    wrapper.style.transform = `translate(-50%, -50%) rotateY(${angle}deg) translateZ(${radius}px)`;
-    wrapper.innerHTML = `
-      <div class="card-inner" style="border-top-color:${d.color}">
-        <div class="flex justify-between items-center">
-          <h3 class="font-medium text-xs">${d.title}</h3>
-          <span class="font-bold text-xs" style="color:${d.color}">${d.price}</span>
-        </div>
-        <p class="text-sm font-bold text-center">${d.phone}</p>
-        <div class="flex justify-between items-center text-xs">
-          <span>${d.tag}</span>
-          <button class="btn-savat" style="background:${d.color};color:#fff;">Savatga</button>
-        </div>
-      </div>
-    `;
-    stage.appendChild(wrapper);
-  }
-}
+    .operator-info {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      opacity: 0;
+      transform: translateX(-20px);
+      transition: all 0.6s ease;
+      max-width: 320px;
+      z-index: 10;
+      text-shadow: 0 0 5px rgba(0,0,0,0.5); /* Matnga yengil soya qo'shish */
+    }
 
-function animate(ts) {
-  if (!lastTime) lastTime = ts;
-  const dt = (ts - lastTime) / 1000;
-  lastTime = ts;
+    .operator-info h2 {
+      font-size: 30px;
+      font-weight: 900;
+      margin-bottom: 6px;
+    }
+    .operator-info p {
+      font-size: 15px;
+      line-height: 1.5;
+    }
 
-  if (dragging) {
-    rotateY += velocity * dt * 0.1;
-    velocity *= 0.9;
-  }
 
-  stage.style.transform = `rotateX(-5deg) rotateY(${rotateY}deg)`;
-  updateBackground();
-  requestAnimationFrame(animate);
-}
+    .operator-info.active {
+      opacity: 1;
+      transform: translateX(0);
+    }
 
-function updateBackground() {
-  const cards = [...stage.children];
-  let minDiff = Infinity, activeColor = '#fff';
-  cards.forEach(card => {
-    const m = card.style.transform.match(/rotateY\((-?\d+\.?\d*)deg\)/);
-    if (m) {
-      const angle = (parseFloat(m[1]) + rotateY) % 360;
-      const diff = Math.abs(angle % 360);
-      if (diff < minDiff) {
-        minDiff = diff;
-        activeColor = card.dataset.color;
+    @media (max-width: 500px) {
+      .stage {
+        height: 250px;
+      }
+      .card-3d {
+        width: 180px;
+        height: 130px;
+      }
+      .operator-info {
+        left: 10px;
+        max-width: 80%;
+        top: 10px;
+      }
+      .operator-info h2 {
+        font-size: 20px;
+      }
+      .operator-info p {
+        font-size: 12px;
       }
     }
-  });
-  document.body.style.background = hexToRgba(activeColor,0.15);
-}
+  </style>
+</head>
+<body class="min-h-screen flex items-center justify-center p-4 relative">
+  <!-- Operator matnlari -->
+  <div id="yota-info" class="operator-info">
+    <h2>Yota</h2>
+    <p>Cheksiz internet, 11-15 MB/s<br>Ichki tarmoqda bepul qo‘ng‘iroqlar<br>Tarif: oyiga 300 rubl</p>
+  </div>
+  <div id="mts-info" class="operator-info">
+    <h2>MTS</h2>
+    <p>200 GB internet<br>Ichki tarmoqda bepul qo‘ng‘iroqlar<br>Tarif: oyiga 270 rubl</p>
+  </div>
+  <div id="beeline-info" class="operator-info">
+    <h2>Beeline</h2>
+    <p>50 GB internet<br>Ichki tarmoqda qo‘ng‘iroqlar<br>Tarif: oyiga 269 rubl</p>
+  </div>
+  <div id="megafon-info" class="operator-info">
+    <h2>Megafon</h2>
+    <p>50 GB internet<br>Ichki tarmoqda bepul qo‘ng‘iroqlar<br>Tarif: oyiga 259 rubl</p>
+  </div>
+  <div id="t2-info" class="operator-info">
+    <h2>T2</h2>
+    <p>50 GB internet<br>Ichki tarmoqda bepul qo‘ng‘iroqlar<br>Tarif: oyiga 249 rubl</p>
+  </div>
 
-function hexToRgba(hex, alpha=1){
-  const c = hex.replace('#','');
-  const bigint = parseInt(c, 16);
-  const r = (bigint >> 16) & 255;
-  const g = (bigint >> 8) & 255;
-  const b = bigint & 255;
-  return `rgba(${r}, ${g}, ${b}, ${alpha})`;
-}
+  <section class="w-full max-w-md" style="margin-top: 30px;">
+    <div class="carousel-3d">
+      <div id="stage" class="stage mx-auto"></div>
+    </div>
+  </section>
 
-function addDrag() {
-  let startX = 0, startRot = 0;
-  stage.addEventListener('pointerdown', e => {
-    dragging = true;
-    stage.setPointerCapture(e.pointerId);
-    startX = e.clientX;
-    startRot = rotateY;
-    lastX = e.clientX;
-    velocity = 0;
-    document.body.classList.add('dragging');
-  });
-  window.addEventListener('pointermove', e => {
-    if (!dragging) return;
-    const dx = e.clientX - startX;
-    rotateY = startRot + dx * 0.4;
-    velocity = e.clientX - lastX;
-    lastX = e.clientX;
-  });
-  window.addEventListener('pointerup', () => {
-    dragging = false;
-    document.body.classList.remove('dragging');
-  });
-}
+  <script>
+    const cardsData = [
+      { id: 'yota', title: 'Yota Cheksiz', price: '₽29.99', phone: '+7 (999) 555-00-11', color: '#0077FF', tag: 'VIP raqam' },
+      { id: 'mts', title: 'MTS 200GB', price: '₽27.99', phone: '+7 (916) 218-60-62', color: '#E30611', tag: 'Omadli raqam' },
+      { id: 'beeline', title: 'Beeline 50GB', price: '₽26.99', phone: '+7 (903) 123-45-67', color: '#FFCC00', tag: 'Oltin seriya' },
+      { id: 'megafon', title: 'Megafon 50GB', price: '₽25.99', phone: '+7 (999) 384-72-71', color: '#00B956', tag: 'Biznes seriya' },
+      { id: 't2', title: 'T2 50GB', price: '₽24.99', phone: '+7 (901) 777-88-99', color: '#000000', tag: 'Qora seriya' },
+    ];
 
-createCards();
-addDrag();
-requestAnimationFrame(animate);
-</script>
+    let radius = 250;
+    const stage = document.getElementById('stage');
+    let rotateY = 0, dragging = false, lastX = 0, velocity = 0, lastTime = null;
+
+    function createCards() {
+      const n = cardsData.length;
+      cardsData.forEach((d, i) => {
+        const angle = (360 / n) * i;
+        const wrapper = document.createElement('div');
+        wrapper.className = 'card-3d';
+        wrapper.dataset.id = d.id;
+        wrapper.dataset.color = d.color;
+        wrapper.style.transform = `translate(-50%, -50%) rotateY(${angle}deg) translateZ(${radius}px)`;
+        wrapper.innerHTML = `
+          <div class="card-inner" style="border-top-color:${d.color}">
+            <div class="flex justify-between items-center">
+              <h3 class="font-medium text-xs">${d.title}</h3>
+              <span class="font-bold text-xs" style="color:${d.color}">${d.price}</span>
+            </div>
+            <p class="text-sm font-bold text-center">${d.phone}</p>
+            <div class="flex justify-between items-center text-xs">
+              <span>${d.tag}</span>
+              <button class="btn-savat" style="background:${d.color};">Savatga</button>
+            </div>
+          </div>
+        `;
+        stage.appendChild(wrapper);
+      });
+    }
+
+    function animate(ts) {
+      if (!lastTime) lastTime = ts;
+      const dt = (ts - lastTime) / 1000;
+      lastTime = ts;
+
+      if (dragging) {
+        rotateY += velocity * dt * 0.1;
+        velocity *= 0.9;
+      }
+
+      stage.style.transform = `rotateX(-5deg) rotateY(${rotateY}deg)`;
+      updateBackground();
+      requestAnimationFrame(animate);
+    }
+
+    // Orqa fon rangiga qarab matn rangini avtomatik tanlaydigan funksiya
+    function getContrastColor(r, g, b) {
+        // Yiqilish algoritmiga asoslangan yorug'likni hisoblash
+        const luminance = (0.299 * r + 0.587 * g + 0.114 * b) / 255;
+        return luminance > 0.5 ? 'black' : 'white';
+    }
+
+
+    function updateBackground() {
+      const cards = [...stage.children];
+      let minDiff = Infinity, activeId = null, activeColor = '#111';
+      cards.forEach(card => {
+        const m = card.style.transform.match(/rotateY\((-?\d+\.?\d*)deg\)/);
+        if (m) {
+          const angle = (parseFloat(m[1]) + rotateY) % 360;
+          const diff = Math.min(Math.abs(angle), Math.abs(angle - 360), Math.abs(angle + 360)); /* 0ga eng yaqin burchakni topish */
+          if (diff < minDiff) {
+            minDiff = diff;
+            activeId = card.dataset.id;
+            activeColor = card.dataset.color;
+          }
+        }
+      });
+
+      try {
+        const r = parseInt(activeColor.slice(1,3), 16);
+        const g = parseInt(activeColor.slice(3,5), 16);
+        const b = parseInt(activeColor.slice(5,7), 16);
+        document.body.style.background = `rgba(${r},${g},${b},0.15)`;
+
+        // Operator ma'lumotlari matni rangini yangilash
+        const allInfos = document.querySelectorAll('.operator-info');
+        allInfos.forEach(info => {
+            info.classList.remove('active');
+            info.style.color = getContrastColor(r,g,b); /* Har bir infoga kontrast rang berish */
+        });
+
+      } catch (e) {
+        document.body.style.background = '#111';
+        document.querySelectorAll('.operator-info').forEach(info => {
+            info.classList.remove('active');
+            info.style.color = 'white'; /* Xato bo'lganda defolt oq rang */
+        });
+      }
+
+      const activeInfo = document.getElementById(activeId + '-info');
+      if (activeInfo) {
+        activeInfo.classList.add('active');
+        // Yuqorida getContrastColor bilan rang berilgan, shuning uchun bu yerda takrorlash shart emas.
+        // activeInfo.style.color = getContrastColor (r,g,b)
+      }
+    }
+
+    function addDrag() {
+      let startX = 0, startRot = 0;
+      stage.addEventListener('pointerdown', e => {
+        dragging = true;
+        stage.setPointerCapture(e.pointerId);
+        startX = e.clientX;
+        startRot = rotateY;
+        lastX = e.clientX;
+        velocity = 0;
+        document.body.classList.add('dragging');
+      });
+      window.addEventListener('pointermove', e => {
+        if (!dragging) return;
+        const dx = e.clientX - startX;
+        rotateY = startRot + dx * 0.4;
+        velocity = e.clientX - lastX;
+        lastX = e.clientX;
+      });
+      window.addEventListener('pointerup', () => {
+        dragging = false;
+        document.body.classList.remove('dragging');
+      });
+
+      stage.addEventListener('touchstart', e => {
+        if (e.touches.length === 1) {
+          dragging = true;
+          startX = e.touches[0].clientX;
+          startRot = rotateY;
+          lastX = e.touches[0].clientX;
+          velocity = 0;
+        }
+      });
+      stage.addEventListener('touchmove', e => {
+        if (!dragging || e.touches.length !== 1) return;
+        const dx = e.touches[0].clientX - startX;
+        rotateY = startRot + dx * 0.4;
+        velocity = e.touches[0].clientX - lastX;
+        lastX = e.touches[0].clientX;
+      });
+      stage.addEventListener('touchend', () => {
+        dragging = false;
+      });
+    }
+
+    createCards();
+    addDrag();
+    requestAnimationFrame(animate);
+  </script>
 </body>
 </html>
