--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
                         </div>
                         <div>
                             <h3 class="font-medium">Beeline 50Гб</h3>
-                            <img src="./img/beeline-logo.svg" alt="Beeline Logo">
+                            <img src=" " alt="">
                         </div>
                     </div>
                     <span class="text-sm font-bold text-[#FFCC00]">₽26.99</span>
                 </div>
                 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (903) 123 45-67</p>
+                    <p class="text-xl font-bold text-center">+7 (903) 122 44-45</p>
                 </div>
                 <div class="flex justify-between items-center">
                     <div class="flex items-center">
@@ -419,7 +419,7 @@
                     <span class="text-sm font-bold text-black">₽24.99</span>
                 </div>
                 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
+                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 </p>
                 </div>
                 <div class="flex justify-between items-center">
                     <div class="flex items-center">
@@ -429,79 +429,29 @@
                     <button class="add-to-cart-btn bg-black text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
                 </div>
             </div>
-              <!-- Tele2 Card -->
-            <div class="operator-card tele2-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+              <!-- Beeline Card -->
+            <div class="operator-card beeline-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
                 <div class="flex items-center justify-between mb-3">
                     <div class="flex items-center">
-                        <div class="w-10 h-10 flex items-center justify-center bg-black/10 rounded-full mr-3">
-                            <i class="ri-sim-card-line text-black ri-lg"></i>
+                        <div class="w-10 h-10 flex items-center justify-center bg-[#FFCC00]/10 rounded-full mr-3">
+                            <i class="ri-sim-card-line text-[#FFCC00] ri-lg"></i>
                         </div>
                         <div>
-                            <h3 class="font-medium">Tele2</h3>
-                            <img src="./img/Frame 13 (6).svg" alt="">
+                            <h3 class="font-medium">Beeline 50Гб</h3>
+                            <img src="" alt="">
                         </div>
                     </div>
-                    <span class="text-sm font-bold text-black">₽24.99</span>
+                    <span class="text-sm font-bold text-[#FFCC00]">₽26.99</span>
                 </div>
                 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
+                    <p class="text-xl font-bold text-center">+7 (903) 123 67-67</p>
                 </div>
                 <div class="flex justify-between items-center">
                     <div class="flex items-center">
                         <i class="ri-star-fill text-yellow-400 mr-1"></i>
                         <span class="text-xs text-gray-600" data-ru="Золотая серия" data-uz="Oltin seriya" data-tj="Силсилаи тилоӣ">Gold Series</span>
                     </div>
-                    <button class="add-to-cart-btn bg-black text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
-                </div>
-            </div>
-              <!-- Tele2 Card -->
-            <div class="operator-card tele2-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
-                <div class="flex items-center justify-between mb-3">
-                    <div class="flex items-center">
-                        <div class="w-10 h-10 flex items-center justify-center bg-black/10 rounded-full mr-3">
-                            <i class="ri-sim-card-line text-black ri-lg"></i>
-                        </div>
-                        <div>
-                            <h3 class="font-medium">Tele2</h3>
-                            <img src="./img/Frame 13 (6).svg" alt="">
-                        </div>
-                    </div>
-                    <span class="text-sm font-bold text-black">₽24.99</span>
-                </div>
-                <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
-                </div>
-                <div class="flex justify-between items-center">
-                    <div class="flex items-center">
-                        <i class="ri-star-fill text-yellow-400 mr-1"></i>
-                        <span class="text-xs text-gray-600" data-ru="Золотая серия" data-uz="Oltin seriya" data-tj="Силсилаи тилоӣ">Gold Series</span>
-                    </div>
-                    <button class="add-to-cart-btn bg-black text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
-                </div>
-            </div>
-              <!-- Tele2 Card -->
-            <div class="operator-card tele2-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
-                <div class="flex items-center justify-between mb-3">
-                    <div class="flex items-center">
-                        <div class="w-10 h-10 flex items-center justify-center bg-black/10 rounded-full mr-3">
-                            <i class="ri-sim-card-line text-black ri-lg"></i>
-                        </div>
-                        <div>
-                            <h3 class="font-medium">Tele2</h3>
-                            <img src="./img/Frame 13 (6).svg" alt="">
-                        </div>
-                    </div>
-                    <span class="text-sm font-bold text-black">₽24.99</span>
-                </div>
-                <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
-                </div>
-                <div class="flex justify-between items-center">
-                    <div class="flex items-center">
-                        <i class="ri-star-fill text-yellow-400 mr-1"></i>
-                        <span class="text-xs text-gray-600" data-ru="Золотая серия" data-uz="Oltin seriya" data-tj="Силсилаи тилоӣ">Gold Series</span>
-                    </div>
-                    <button class="add-to-cart-btn bg-black text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
+                    <button class="add-to-cart-btn bg-[#FFCC00] text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
                 </div>
             </div>
               <!-- Tele2 Card -->
@@ -519,7 +469,7 @@
                     <span class="text-sm font-bold text-black">₽24.99</span>
                 </div>
                 <div class="bg-gray-50 rounded-lg p-3 mb-3">
-                    <p class="text-xl font-bold text-center">+7 (999) 777-0000 <br><span data-ru="нет" data-uz="yo'q" data-tj="не">нет</span></p>
+                    <p class="text-xl font-bold text-center">+7 (999) 777-2222 </p>
                 </div>
                 <div class="flex justify-between items-center">
                     <div class="flex items-center">
@@ -552,6 +502,31 @@
                         <span class="text-xs text-gray-600" data-ru="Счастливый номер" data-uz="Baxtli raqam" data-tj="Рақами хушбахт">Lucky Number</span>
                     </div>
                     <button class="add-to-cart-btn bg-[#E30611] text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
+                </div>
+            </div>
+                 <!-- Tele2 Card -->
+            <div class="operator-card tele2-card bg-white rounded-lg shadow-sm border-t-4 p-4 cursor-pointer">
+                <div class="flex items-center justify-between mb-3">
+                    <div class="flex items-center">
+                        <div class="w-10 h-10 flex items-center justify-center bg-black/10 rounded-full mr-3">
+                            <i class="ri-sim-card-line text-black ri-lg"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-medium">Tele2</h3>
+                            <img src="./img/Frame 13 (6).svg" alt="">
+                        </div>
+                    </div>
+                    <span class="text-sm font-bold text-black">₽24.99</span>
+                </div>
+                <div class="bg-gray-50 rounded-lg p-3 mb-3">
+                    <p class="text-xl font-bold text-center">+7 (999) 5555-1212 </p>
+                </div>
+                <div class="flex justify-between items-center">
+                    <div class="flex items-center">
+                        <i class="ri-star-fill text-yellow-400 mr-1"></i>
+                        <span class="text-xs text-gray-600" data-ru="Золотая серия" data-uz="Oltin seriya" data-tj="Силсилаи тилоӣ">Gold Series</span>
+                    </div>
+                    <button class="add-to-cart-btn bg-black text-white px-4 py-2 !rounded-button cursor-pointer" data-ru="В корзину" data-uz="Savatga" data-tj="Ба корзина">Savatga</button>
                 </div>
             </div>
             <!-- Megafon Card -->
@@ -1113,5 +1088,4 @@
     </script>
 </body>
 </html>
-
 
